--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         </section>
 
         <!-- 示範餐點 -->
-        <section class="section-meals" id="meal" >
+        <section class="section-meals" id="meal">
             <div class="container center-text" data-aos="zoom-in">
-                <span class="subheading" >示範餐點</span>
-                <h2 class="heading-secondary" >我們將從5,000+的食譜中進行選擇</h2>
+                <span class="subheading">示範餐點</span>
+                <h2 class="heading-secondary">我們將從5,000+的食譜中進行選擇</h2>
             </div>
 
 
@@ -228,7 +228,7 @@
 
 
         <!-- 用戶推薦 -->
-        <section class="section-testimonials" id="testimonials" >
+        <section class="section-testimonials" id="testimonials">
             <div class="testimonials-container">
                 <span class="subheading">使用推薦</span>
                 <h2 class="heading-secondary">只要你嘗試過了，就回不去!</h2>
@@ -268,7 +268,7 @@
                     </figure>
                 </div>
             </div>
-            <div  data-aos="fade-right" class="gallery" >
+            <div data-aos="fade-right" class="gallery">
                 <figure class="gallery-item">
                     <img src="img/gallery/gallery-1.jpg" alt="食物照片">
                     <!-- <figcaption>caption</figcaption> -->
@@ -309,6 +309,8 @@
             </div>
         </section>
 
+
+        <!-- 價格方案 -->
         <section class="section-pricing" id="pricing">
             <div class="container">
                 <span class="subheading">兩種價格方案</span>
@@ -316,7 +318,7 @@
             </div>
 
             <div class="container grid grid--2-cols margin-bottom-md">
-                <div class="pricing-plan pricing-plan--starter" data-aos="flip-down">
+                <div class="pricing-plan pricing-plan--starter" data-aos="zoom-in">
                     <header class="plan-header">
                         <p class="plan-name">入門版</p>
                         <p class="plan-price"><span>$</span>2000</p>
@@ -340,7 +342,7 @@
                     </div>
                 </div>
 
-                <div class="pricing-plan pricing-plan--complete" data-aos="flip-down">
+                <div class="pricing-plan pricing-plan--complete" data-aos="zoom-in">
                     <header class="plan-header">
                         <p class="plan-name">完整版</p>
                         <p class="plan-price"><span>$</span>4500</p>
@@ -373,7 +375,7 @@
                 </aside>
             </div>
 
-            <div class="container grid grid--4-cols">
+            <div class="container grid grid--4-cols" data-aos="fade-right">
                 <div class="feature">
                     <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
                     <p class="feature-title">不用在自己做飯了</p>
@@ -398,7 +400,8 @@
             </div>
         </section>
 
-        <section class="section-cta" id="cta">
+        <!-- 註冊卡片 -->
+        <section class="section-cta" id="cta" data-aos="zoom-in">
             <div class="container">
                 <div class="cta">
                     <div class="cta-text-box">
